<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#942D3C8E"
    tools:context=".BusOneTimetableActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar_t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_temp"
        app:itemIconTint="@drawable/shape_temp_2"
        app:itemTextColor="@drawable/shape_temp_2"
        app:menu="@menu/menu_bar" />


    <TableLayout
        android:id="@+id/table1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#FFFFFF"
        android:elevation="5dp">

        //Table Header

        <TableRow android:background="@color/purple_700">

            <TextView
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </TableRow>

        //Table Row Data

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Abdullahpur"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="6.40 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="9.10 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Azampur"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="6.46 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="9.17 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Jasimuddin Road"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="6.50 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="9.24 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Airport (In front of police box)"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="6.55 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="9.30 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Khilkhet
                (Near Foot-Over Bridge)"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="7.00 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="9.40 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>



        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row6name"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="7.30 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="10.40 AM"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/btn_showRoute1"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/table1"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#02b30a"
        android:elevation="5dp"
        android:text="Show in Map"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:icon="@drawable/marker" />

    <Button
        android:id="@+id/callbtnBusOne"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_showRoute1"
        android:layout_centerInParent="true"
        android:backgroundTint="#02b30a"
        android:elevation="5dp"
        android:text="Contact Conductor"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:icon="@drawable/ic_baseline_call_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/callbtnBusOne"
        android:text="Please do not call except trip time"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="10dp" />


</RelativeLayout>